AppContext, JoinForm and LoadingSpinner added

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import './scss/colors.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +7,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: $color-gold-1 !important;
+  background-color: $color-hextech-black !important;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.btn-gradient-gold {
+  background-image: $gradient-gold !important; /* Kullanmak istediğiniz gradient değişkeni */
 }
