--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -1,13 +1,8 @@
-/* Home.css */
-.join-room-form {
+.home-form-container {
   margin: 10vh auto;
   width: 50%;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-
-.btn {
-  background: linear-gradient(#c89b3c, #785a28);
 }
