--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,3 +1,13 @@
+// RED
+
+$color-red-1: #ff0000;
+$color-red-2: #f50f0f;
+$color-red-3: #eb1d1d;
+$color-red-4: #d30000;
+$color-red-5: #b50000;
+$color-red-6: #980000;
+$color-red-7: #740000;
+
 // BLUE
 
 $color-blue-1: #cdfafa;
