--- a/src/components/PlayerCard/PlayerCard.scss
+++ b/src/components/PlayerCard/PlayerCard.scss
@@ -5,17 +5,44 @@
   padding: 12px 24px;
   position: relative;
 
-  height: 600px;
-  width: 250px;
-  background-color: $color-blue-5;
-  clip-path: polygon(0% 0%, 100% 0%, 100% 85%, 50% 100%, 0% 85%);
+  min-height: 200px;
+  max-height: 300px;
+
+  //min-width: 100px;
+  //max-width: 300px;
+  //border: 1px solid $color-blue-1;
+  //box-shadow: 0px 0px 15px 0 $color-blue-3;
+  background-color: $color-blue-6;
+  //flex: 1;
+  //background-color: $color-blue-5;
+  //clip-path: polygon(0% 0%, 100% 0%, 100% 85%, 50% 100%, 0% 85%);
+}
+
+.avatar {
+  min-width: 54px;
+  max-width: 100%;
+  min-height: 54px;
+  max-height: 100px;
+  height: auto;
+}
+
+.champion-name-container {
+  display: flex;
+  align-items: center;
+  font-size: xx-large;
+}
+
+.champion-name-container label {
+  font-weight: bold;
 }
 
 .player-name-container {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: start;
   justify-content: center;
   font-size: xx-large;
+  overflow: hidden;
 }
 
 .player-name-container label {
@@ -30,18 +57,18 @@
 .btn-check:checked + .btn {
   background-color: $color-blue-2;
   color: black !important;
-  box-shadow: 0 0 10px $color-blue-2;
+  box-shadow: 0 0 10px 0px $color-blue-2;
 }
 
 .btn-check:not(:checked) + .btn {
   color: $color-red-2;
   border-color: $color-red-2;
-  box-shadow: 0 0 10px $color-red-2;
+  box-shadow: 0 0 0 0px $color-red-2;
 }
 
 .ready-toggle {
   position: absolute;
-  bottom: 25%;
-  left: 50%;
-  transform: translateX(-50%);
+  bottom: 0%;
+  right: 0%;
+  transform: translateX(0%);
 }
