--- a/src/components/PlayerCard/PlayerCard.scss
+++ b/src/components/PlayerCard/PlayerCard.scss
@@ -8,17 +8,19 @@
   min-height: 200px;
   max-height: 300px;
 
+  background-image: linear-gradient($color-blue-5, 70%, $color-blue-7);
+
   //min-width: 100px;
   //max-width: 300px;
   //border: 1px solid $color-blue-1;
   //box-shadow: 0px 0px 15px 0 $color-blue-3;
-  background-color: $color-blue-6;
+  //background-color: $color-blue-6;
   //flex: 1;
   //background-color: $color-blue-5;
   //clip-path: polygon(0% 0%, 100% 0%, 100% 85%, 50% 100%, 0% 85%);
 }
 
-.avatar {
+.selected-champion {
   min-width: 54px;
   max-width: 100%;
   min-height: 54px;
@@ -27,9 +29,7 @@
 }
 
 .champion-name-container {
-  display: flex;
-  align-items: center;
-  font-size: xx-large;
+  font-size: large;
 }
 
 .champion-name-container label {
@@ -55,20 +55,27 @@
 }
 
 .btn-check:checked + .btn {
-  background-color: $color-blue-2;
+  background-image: linear-gradient(
+    $color-gold-2,
+    70%,
+    $color-gold-3
+  ) !important;
   color: black !important;
-  box-shadow: 0 0 10px 0px $color-blue-2;
+  box-shadow: 0 0 8px 0px $color-gold-2;
 }
 
 .btn-check:not(:checked) + .btn {
-  color: $color-red-2;
-  border-color: $color-red-2;
-  box-shadow: 0 0 0 0px $color-red-2;
+  //background-image: linear-gradient($color-gold-4, $color-gold-7) !important;
+  border: 1px solid $color-gold-2;
+  color: $color-gold-1;
 }
 
 .ready-toggle {
-  position: absolute;
-  bottom: 0%;
-  right: 0%;
-  transform: translateX(0%);
+  padding: 0px;
+  max-width: 100px;
+  font-size: large;
+  //position: absolute;
+  //bottom: 0%;
+  //left: 1%;
+  //transform: translateX(0%);
 }
