--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -18,6 +18,16 @@ $color-blue-5: #0a323c;
 $color-blue-6: #091428;
 $color-blue-7: #0a1428;
 
+// green
+
+$color-green-1: #ccff33;
+$color-green-2: #9ef01a;
+$color-green-3: #70e000;
+$color-green-4: #38b000;
+$color-green-5: #008000;
+$color-green-6: #007200;
+$color-green-7: #006400;
+
 // GOLD
 
 $color-gold-1: #f0e6d2;
