--- a/src/components/PlayerCard/PlayerCard.scss
+++ b/src/components/PlayerCard/PlayerCard.scss
@@ -26,6 +26,8 @@
   min-height: 54px;
   max-height: 100px;
   height: auto;
+  border: 1px solid $color-hextech-black;
+  box-shadow: 0 0 10px 0px $color-hextech-black;
 }
 
 .champion-name-container {
@@ -65,8 +67,8 @@
 }
 
 .btn-check:not(:checked) + .btn {
-  //background-image: linear-gradient($color-red-4, $color-red-7) !important;
-  border: 1px solid $color-red-2;
+  background-image: linear-gradient($color-red-6, $color-red-7) !important;
+  //border: 1px solid $color-red-2;
   color: $color-gold-1;
 }
 
